--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,13 @@
   <link type="image/x-icon" rel="shortcut icon" href="./img/Zaion.ico">
   <meta name="title" content="Смотреть Аниме онлайн в хорошем качестве на нашем сайте" />
   <meta property="og:title" content="Смотреть Аниме онлайн в хорошем качестве на нашем сайте" />
-  <meta property="og:description" content="Где найти аниме? Как посмотреть его бесплатно? На нашем сайте можно смотреть аниме бесплатно через плеер,сайт поддерживает систему рейтингов и комментарии. Админы следят за сайтом" />
-  <meta name="description" content="Где найти аниме? Как посмотреть его бесплатно? На нашем сайте можно смотреть аниме бесплатно через плеер,сайт поддерживает систему рейтингов и комментарии. Админы следят за сайтом" />
-
+  <meta property="og:description"
+    content="Где найти аниме? Как посмотреть его бесплатно? На нашем сайте можно смотреть аниме бесплатно через плеер,сайт поддерживает систему рейтингов и комментарии. Админы следят за сайтом" />
+  <meta name="description"
+    content="Где найти аниме? Как посмотреть его бесплатно? На нашем сайте можно смотреть аниме бесплатно через плеер,сайт поддерживает систему рейтингов и комментарии. Админы следят за сайтом" />
+  <!-- Yandex.RTB -->
+  <script>window.yaContextCb = window.yaContextCb || []</script>
+  <script src="https://yandex.ru/ads/system/context.js" async></script>
   <meta property="og:site_name" content="AnimesGO" />
   <meta name="Keywords" content="смотреть аниме,ANIMESGO,аниме смотреть,аниме смотреть бесплатно">
   <title>ANIMESGO</title>
