--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,13 @@
   <meta name="theme-color" content="#000000" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Public+Sans&display=swap" />
   <link type="image/x-icon" rel="shortcut icon" href="./img/Zaion.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <meta name="title" content="Смотреть Аниме онлайн в хорошем качестве на нашем сайте" />
   <meta property="og:title" content="Смотреть Аниме онлайн в хорошем качестве на нашем сайте" />
   <meta property="og:description"
     content="Где найти аниме? Как посмотреть его бесплатно? На нашем сайте можно смотреть аниме бесплатно через плеер,сайт поддерживает систему рейтингов и комментарии. Админы следят за сайтом" />
   <meta name="description"
     content="Где найти аниме? Как посмотреть его бесплатно? На нашем сайте можно смотреть аниме бесплатно через плеер,сайт поддерживает систему рейтингов и комментарии. Админы следят за сайтом" />
-  <!-- Yandex.RTB -->
-  <script>window.yaContextCb = window.yaContextCb || []</script>
-  <script src="https://yandex.ru/ads/system/context.js" async></script>
   <meta property="og:site_name" content="AnimesGO" />
   <meta name="Keywords" content="смотреть аниме,ANIMESGO,аниме смотреть,аниме смотреть бесплатно">
   <title>ANIMESGO</title>
